// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-buttons (APP) => в приложении нет кнопки "Скачать" 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    centeredicon="true"
    classname="action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить на Яндекс.Диск
    </span>
  </lego-components_button>
</div>
`;

exports[`action-buttons (APP) => не должен скрываться при опции \`hideOnSliderOrPaneOpen: true\` и открытом слайдере 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    centeredicon="true"
    classname="action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить на Яндекс.Диск
    </span>
  </lego-components_button>
</div>
`;

exports[`action-buttons => дефолтное состояние для папки 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    aria-live="assertive"
    classname="save-button save-button_save action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить на Яндекс.Диск
    </span>
  </lego-components_button>
  <lego-components_button
    classname="download-button action-buttons__button action-buttons__button_download"
    disabled="false"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    view="raised"
  >
    Скачать всё
  </lego-components_button>
</div>
`;

exports[`action-buttons => дефолтное состояние для файла 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    aria-live="assertive"
    classname="save-button save-button_save action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить на Яндекс.Диск
    </span>
  </lego-components_button>
  <lego-components_button
    classname="download-button action-buttons__button action-buttons__button_download"
    disabled="false"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    view="raised"
  >
    Скачать
  </lego-components_button>
</div>
`;

exports[`action-buttons => с иконками 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    aria-live="assertive"
    classname="save-button save-button_save action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить на Яндекс.Диск
    </span>
  </lego-components_button>
  <lego-components_button
    classname="download-button action-buttons__button action-buttons__button_download"
    disabled="false"
    iconleft="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
    innerref="[object Object]"
    onclick="function () { [native code] }"
    size="m"
    view="raised"
  >
    Скачать
  </lego-components_button>
</div>
`;

exports[`action-buttons => скрытие при опции \`hideOnSliderOrPaneOpen: true\` и открытой панели 1`] = `null`;

exports[`action-buttons => скрытие при опции \`hideOnSliderOrPaneOpen: true\` и открытом слайдере 1`] = `null`;

exports[`action-buttons для антиФО => на десктопах должно быть промо подписки на почту 360 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    aria-live="assertive"
    classname="save-button save-button_save-and-download action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить и скачать с Яндекс.Диска
    </span>
  </lego-components_button>
  <lego-components_tooltip
    anchor="[object Object]"
    classname="action-buttons__antifo-tooltip"
    direction="right,left,top"
    hastail="true"
    mainoffset="10"
    scope="[object Object]"
    size="s"
    state="warning"
    view="default"
    visible="true"
    zindex="5"
  >
    <span
      class="action-buttons__antifo-tooltip-text"
    >
      Превышен лимит скачивания, вы можете сохранить файл на Яндекс.Диск и скачать его со своего Диска
    </span>
  </lego-components_tooltip>
</div>
`;

exports[`action-buttons для антиФО => на десктопах у папки нет кнопки Скачать и показан тултип 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    aria-live="assertive"
    classname="save-button save-button_save-and-download action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить и скачать с Яндекс.Диска
    </span>
  </lego-components_button>
  <lego-components_tooltip
    anchor="[object Object]"
    classname="action-buttons__antifo-tooltip"
    direction="right,left,top"
    hastail="true"
    mainoffset="10"
    scope="[object Object]"
    size="s"
    state="warning"
    view="default"
    visible="true"
    zindex="5"
  >
    <span
      class="action-buttons__antifo-tooltip-text"
    >
      Превышен лимит скачивания, вы можете сохранить папку на Яндекс.Диск и скачать её со своего Диска
    </span>
  </lego-components_tooltip>
</div>
`;

exports[`action-buttons для антиФО => на мобилах должно быть промо подписки на почту 360 1`] = `
<div
  class="action-buttons"
>
  <lego-components_button
    aria-live="assertive"
    classname="save-button save-button_save-and-download action-buttons__button action-buttons__button_save"
    innerref="[object Object]"
    size="m"
    theme="raised"
    view="action"
  >
    <span>
      Сохранить и скачать с Яндекс.Диска
    </span>
  </lego-components_button>
</div>
`;
